--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,7 @@
+VERSION 2.18.1
+------------------------
+   o A vignette modified.
+
 VERSION 2.4.1
 ------------------------
    o A vignette modified.
