--- a/vignettes/scTensor_4_Reanalysis.Rmd
+++ b/vignettes/scTensor_4_Reanalysis.Rmd
@@ -70,7 +70,7 @@ library("LRBaseDbi")
 
 # Create LRBase object
 ah <- AnnotationHub()
-dbfile <- query(ah, c("LRBaseDb", "Homo sapiens", "v002"))[[1]]
+dbfile <- query(ah, c("LRBaseDb", "Homo sapiens"))[[1]]
 LRBase.Hsa.eg.db <- LRBaseDbi::LRBaseDb(dbfile)
 
 # Register the file pass of user's LRBase
