--- a/vignettes/scTensor.Rmd
+++ b/vignettes/scTensor.Rmd
@@ -73,7 +73,7 @@ mcols(ah)
 Specifying some keywords in `query()`, we can find LRBase data in AnnotationHub.
 
 ```{r AHub2, echo=TRUE}
-dbfile <- query(ah, c("LRBaseDb", "Homo sapiens", "v002"))[[1]]
+dbfile <- query(ah, c("LRBaseDb", "Homo sapiens"))[[1]]
 ```
 
 AnnotationHub also keeps old data as an archive, so please make sure you have the latest version (e.g. "v002" or higher) when you search for LRBaseDb.
